--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo VF Concept">
+    <img src="logo_vf_concept.png" alt="Logo VF Concept">
   </header>
 
   <h1>Produtos VF Concept</h1>
