--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,10 +37,15 @@
       width: 250px;
       text-align: center;
     }
-    .produto img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
+    .galeria {
+      display: flex;
+      gap: 10px;
+      overflow-x: auto;
+      margin-bottom: 10px;
+    }
+    .galeria img {
+      width: 100px;
+      border-radius: 6px;
     }
     .produto h3 {
       margin: 10px 0 5px;
@@ -68,48 +72,64 @@
 <body>
   <header>
     <img src="logo_vf_concept.png" alt="Logo VF Concept">
-  </header>
-
-  <h1>Produtos VF Concept</h1>
+  </header>  <h1>Produtos VF Concept</h1>
   <section class="produtos">
     <div class="produto">
-      <img src="https://via.placeholder.com/250x200" alt="Óculos">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Óculos - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Óculos - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Óculos - Detalhe">
+      </div>
       <h3>Óculos Estiloso</h3>
       <p>Design moderno com proteção UV.</p>
       <p><strong>R$ 99,90</strong></p>
       <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20%C3%93culos%20Estiloso">Comprar</a>
     </div>
     <div class="produto">
-      <img src="https://via.placeholder.com/250x200" alt="Copo">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Copo - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Copo - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Copo - Detalhe">
+      </div>
       <h3>Copo Personalizado</h3>
       <p>Copo de acrílico com arte exclusiva.</p>
       <p><strong>R$ 29,90</strong></p>
       <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Copo%20Personalizado">Comprar</a>
     </div>
     <div class="produto">
-      <img src="https://via.placeholder.com/250x200" alt="Boné">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Boné - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Boné - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Boné - Detalhe">
+      </div>
       <h3>Boné VF Classic</h3>
       <p>Boné com ajuste e bordado frontal.</p>
       <p><strong>R$ 59,90</strong></p>
       <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Bon%C3%A9%20VF%20Classic">Comprar</a>
     </div>
     <div class="produto">
-      <img src="https://via.placeholder.com/250x200" alt="Calça">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Calça - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Calça - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Calça - Detalhe">
+      </div>
       <h3>Calça Jogger</h3>
       <p>Conforto e estilo no dia a dia.</p>
       <p><strong>R$ 119,90</strong></p>
       <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Cal%C3%A7a%20Jogger">Comprar</a>
     </div>
     <div class="produto">
-      <img src="https://via.placeholder.com/250x200" alt="Camisa">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Camisa - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Camisa - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Camisa - Detalhe">
+      </div>
       <h3>Camisa Casual</h3>
       <p>Perfeita pra qualquer ocasião.</p>
       <p><strong>R$ 79,90</strong></p>
       <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Camisa%20Casual">Comprar</a>
     </div>
-  </section>
-
-  <footer>
+  </section>  <footer>
     VF Concept © 2025 - Todos os direitos reservados<br>
     Contato: vfconcept8@gmail.com
   </footer>
