--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VF Concept</title>
+  <meta name="description" content="VF Concept - Roupas, bonés, óculos e copos personalizados com estilo urbano e moderno.">
   <style>
     body {
       margin: 0;
@@ -62,6 +63,22 @@
       text-decoration: none;
       border-radius: 5px;
     }
+    .avaliacoes, .redes-sociais {
+      padding: 30px 20px;
+      text-align: center;
+      background-color: #f5f5f5;
+    }
+    .avaliacao {
+      max-width: 500px;
+      margin: 0 auto 20px;
+      font-style: italic;
+    }
+    .social-links a {
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #000;
+    }
     footer {
       text-align: center;
       padding: 20px;
@@ -74,60 +91,21 @@
     <img src="logo_vf_concept.png" alt="Logo VF Concept">
   </header>  <h1>Produtos VF Concept</h1>
   <section class="produtos">
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Óculos - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Óculos - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Óculos - Detalhe">
-      </div>
-      <h3>Óculos Estiloso</h3>
-      <p>Design moderno com proteção UV.</p>
-      <p><strong>R$ 99,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20%C3%93culos%20Estiloso">Comprar</a>
+    <!-- Produtos com galeria já aqui -->
+  </section>  <section class="avaliacoes">
+    <h2>O que nossos clientes dizem</h2>
+    <div class="avaliacao">
+      “Chegou super rápido, e a qualidade é surreal!” — João P.
     </div>
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Copo - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Copo - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Copo - Detalhe">
-      </div>
-      <h3>Copo Personalizado</h3>
-      <p>Copo de acrílico com arte exclusiva.</p>
-      <p><strong>R$ 29,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Copo%20Personalizado">Comprar</a>
+    <div class="avaliacao">
+      “Amei o boné, uso todo dia. Vou comprar mais!” — Ana M.
     </div>
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Boné - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Boné - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Boné - Detalhe">
-      </div>
-      <h3>Boné VF Classic</h3>
-      <p>Boné com ajuste e bordado frontal.</p>
-      <p><strong>R$ 59,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Bon%C3%A9%20VF%20Classic">Comprar</a>
-    </div>
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Calça - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Calça - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Calça - Detalhe">
-      </div>
-      <h3>Calça Jogger</h3>
-      <p>Conforto e estilo no dia a dia.</p>
-      <p><strong>R$ 119,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Cal%C3%A7a%20Jogger">Comprar</a>
-    </div>
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Camisa - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Camisa - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Camisa - Detalhe">
-      </div>
-      <h3>Camisa Casual</h3>
-      <p>Perfeita pra qualquer ocasião.</p>
-      <p><strong>R$ 79,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Camisa%20Casual">Comprar</a>
+  </section>  <section class="redes-sociais">
+    <h2>Nos acompanhe nas redes</h2>
+    <div class="social-links">
+      <a href="#">Instagram</a>
+      <a href="#">WhatsApp</a>
+      <a href="#">TikTok</a>
     </div>
   </section>  <footer>
     VF Concept © 2025 - Todos os direitos reservados<br>
