--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VF Concept</title>
-  <meta name="description" content="VF Concept - Roupas, bonés, óculos e copos personalizados com estilo urbano e moderno.">
+  <title>VF Imports</title>
+  <meta name="description" content="VF Imports - Roupas, bonés, óculos e copos personalizados com estilo urbano e moderno.">
   <style>
     body {
       margin: 0;
@@ -89,10 +89,10 @@
 </head>
 <body>
   <header>
-    <img src="logo_vf_concept.png" alt="Logo VF Concept">
+    <img src="logo_vf_imports.png" alt="Logo VF Imports">
   </header>
 
-  <h1>Produtos VF Concept</h1>
+  <h1>Produtos VF Imports</h1>
   <section class="produtos">
     <div class="produto">
       <div class="galeria">
@@ -158,25 +158,12 @@
   <section class="avaliacoes">
     <h2>O que nossos clientes dizem</h2>
     <div class="avaliacao">
-      “Chegou super rápido, e a qualidade é surreal!” — João P.
-    </div>
-    <div class="avaliacao">
-      “Amei o boné, uso todo dia. Vou comprar mais!” — Ana M.
-    </div>
-  </section>
-
-  <section class="redes-sociais">
-    <h2>Nos acompanhe nas redes</h2>
-    <div class="social-links">
-      <a href="#">Instagram</a>
-      <a href="#">WhatsApp</a>
-      <a href="#">TikTok</a>
+      “Produto excelente! Chegou antes do prazo e com muita qualidade.” — Cliente Satisfeito
     </div>
   </section>
 
   <footer>
-    VF Concept © 2025 - Todos os direitos reservados<br>
-    Contato: vfconcept8@gmail.com
+    &copy; 2025 VF Imports - Todos os direitos reservados.
   </footer>
 </body>
 </html>
