--- a/index.html
+++ b/index.html
@@ -94,7 +94,65 @@
 
   <h1>Produtos VF Imports</h1>
   <section class="produtos">
-    <!-- Seus produtos aqui (sem alteração) -->
+    <div class="produto">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Óculos - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Óculos - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Óculos - Detalhe">
+      </div>
+      <h3>Óculos Estiloso</h3>
+      <p>Design moderno com proteção UV.</p>
+      <p><strong>R$ 99,90</strong></p>
+      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Óculos%20Estiloso">Comprar</a>
+    </div>
+
+    <div class="produto">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Copo - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Copo - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Copo - Detalhe">
+      </div>
+      <h3>Copo Personalizado</h3>
+      <p>Copo de acrílico com arte exclusiva.</p>
+      <p><strong>R$ 29,90</strong></p>
+      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Copo%20Personalizado">Comprar</a>
+    </div>
+
+    <div class="produto">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Boné - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Boné - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Boné - Detalhe">
+      </div>
+      <h3>Boné VF Classic</h3>
+      <p>Boné com ajuste e bordado frontal.</p>
+      <p><strong>R$ 59,90</strong></p>
+      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Boné%20VF%20Classic">Comprar</a>
+    </div>
+
+    <div class="produto">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Calça - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Calça - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Calça - Detalhe">
+      </div>
+      <h3>Calça Jogger</h3>
+      <p>Conforto e estilo no dia a dia.</p>
+      <p><strong>R$ 119,90</strong></p>
+      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Calça%20Jogger">Comprar</a>
+    </div>
+
+    <div class="produto">
+      <div class="galeria">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Camisa - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Camisa - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Camisa - Detalhe">
+      </div>
+      <h3>Camisa Casual</h3>
+      <p>Perfeita pra qualquer ocasião.</p>
+      <p><strong>R$ 79,90</strong></p>
+      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Camisa%20Casual">Comprar</a>
+    </div>
   </section>
 
   <section class="avaliacoes">
