--- a/index.html
+++ b/index.html
@@ -88,82 +88,60 @@
   </style>
 </head>
 <body>
+
   <header>
-    <img src="logo-vf.png" alt="Logo VF Imports">
+    <img src="nova_logo_vf.png" alt="Logo VF Imports">
   </header>
 
-  <h1>Produtos VF Imports</h1>
-  <section class="produtos">
+  <h1>Produtos em Destaque</h1>
+  <div class="produtos">
     <div class="produto">
       <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Óculos - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Óculos - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Óculos - Detalhe">
+        <img src="produto1.jpg" alt="Produto 1">
+        <img src="produto1b.jpg" alt="Produto 1 Alternativo">
       </div>
-      <h3>Óculos Estiloso</h3>
-      <p>Design moderno com proteção UV.</p>
-      <p><strong>R$ 99,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Óculos%20Estiloso">Comprar</a>
+      <h3>Boné Aba Reta</h3>
+      <p>Estilo urbano com conforto e autenticidade.</p>
+      <a href="#" class="botao">Comprar</a>
     </div>
-
     <div class="produto">
       <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Copo - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Copo - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Copo - Detalhe">
+        <img src="produto2.jpg" alt="Produto 2">
+        <img src="produto2b.jpg" alt="Produto 2 Alternativo">
       </div>
-      <h3>Copo Personalizado</h3>
-      <p>Copo de acrílico com arte exclusiva.</p>
-      <p><strong>R$ 29,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Copo%20Personalizado">Comprar</a>
+      <h3>Óculos VF</h3>
+      <p>Design moderno com proteção UV completa.</p>
+      <a href="#" class="botao">Comprar</a>
     </div>
-
     <div class="produto">
       <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Boné - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Boné - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Boné - Detalhe">
+        <img src="produto3.jpg" alt="Produto 3">
+        <img src="produto3b.jpg" alt="Produto 3 Alternativo">
       </div>
-      <h3>Boné VF Classic</h3>
-      <p>Boné com ajuste e bordado frontal.</p>
-      <p><strong>R$ 59,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20o%20Boné%20VF%20Classic">Comprar</a>
+      <h3>Copo Térmico</h3>
+      <p>Ideal para manter sua bebida gelada com estilo.</p>
+      <a href="#" class="botao">Comprar</a>
     </div>
-
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Calça - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Calça - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Calça - Detalhe">
-      </div>
-      <h3>Calça Jogger</h3>
-      <p>Conforto e estilo no dia a dia.</p>
-      <p><strong>R$ 119,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Calça%20Jogger">Comprar</a>
-    </div>
-
-    <div class="produto">
-      <div class="galeria">
-        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Camisa - Frente">
-        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Camisa - Lateral">
-        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Camisa - Detalhe">
-      </div>
-      <h3>Camisa Casual</h3>
-      <p>Perfeita pra qualquer ocasião.</p>
-      <p><strong>R$ 79,90</strong></p>
-      <a class="botao" href="https://wa.me/SEUNUMERO?text=Quero%20comprar%20a%20Camisa%20Casual">Comprar</a>
-    </div>
-  </section>
+  </div>
 
   <section class="avaliacoes">
-    <h2>O que nossos clientes dizem</h2>
-    <div class="avaliacao">
-      “Produto excelente! Chegou antes do prazo e com muita qualidade.” — Cliente Satisfeito
+    <h2>O que dizem nossos clientes</h2>
+    <div class="avaliacao">"Produto de qualidade absurda, entrega rápida e muito estilo!"</div>
+    <div class="avaliacao">"Os óculos VF são os melhores que já usei. Recomendo demais!"</div>
+  </section>
+
+  <section class="redes-sociais">
+    <h2>Nos acompanhe</h2>
+    <div class="social-links">
+      <a href="#">Instagram</a>
+      <a href="#">WhatsApp</a>
+      <a href="#">Shopee</a>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 VF Imports - Todos os direitos reservados.
+    &copy; 2025 VF Imports. Todos os direitos reservados.
   </footer>
+
 </body>
 </html>
