--- a/index.html
+++ b/index.html
@@ -84,64 +84,77 @@
       text-align: center;
       padding: 20px;
       font-size: 0.9rem;
+      background-color: #000;
+      color: #fff;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <img src="nova_logo_vf.png" alt="Logo VF Imports">
+    <img src="logo_vf_imports.png" alt="Logo VF Imports">
   </header>
 
-  <h1>Produtos em Destaque</h1>
-  <div class="produtos">
+  <h1>Produtos VF Imports</h1>
+  <section class="produtos">
     <div class="produto">
       <div class="galeria">
-        <img src="produto1.jpg" alt="Produto 1">
-        <img src="produto1b.jpg" alt="Produto 1 Alternativo">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Óculos - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Óculos - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Óculos - Detalhe">
       </div>
-      <h3>Boné Aba Reta</h3>
-      <p>Estilo urbano com conforto e autenticidade.</p>
-      <a href="#" class="botao">Comprar</a>
+      <h3>Óculos Estiloso</h3>
+      <p>Design moderno com proteção UV.</p>
+      <p><strong>R$ 99,90</strong></p>
+      <a class="botao" href="#">Comprar via WhatsApp</a>
     </div>
+
     <div class="produto">
       <div class="galeria">
-        <img src="produto2.jpg" alt="Produto 2">
-        <img src="produto2b.jpg" alt="Produto 2 Alternativo">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Copo - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Copo - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Copo - Detalhe">
       </div>
-      <h3>Óculos VF</h3>
-      <p>Design moderno com proteção UV completa.</p>
-      <a href="#" class="botao">Comprar</a>
+      <h3>Copo Personalizado</h3>
+      <p>Copo de acrílico com arte exclusiva.</p>
+      <p><strong>R$ 29,90</strong></p>
+      <a class="botao" href="#">Comprar via WhatsApp</a>
     </div>
+
     <div class="produto">
       <div class="galeria">
-        <img src="produto3.jpg" alt="Produto 3">
-        <img src="produto3b.jpg" alt="Produto 3 Alternativo">
+        <img src="https://via.placeholder.com/250x200?text=Frente" alt="Boné - Frente">
+        <img src="https://via.placeholder.com/250x200?text=Lateral" alt="Boné - Lateral">
+        <img src="https://via.placeholder.com/250x200?text=Detalhe" alt="Boné - Detalhe">
       </div>
-      <h3>Copo Térmico</h3>
-      <p>Ideal para manter sua bebida gelada com estilo.</p>
-      <a href="#" class="botao">Comprar</a>
+      <h3>Boné VF Classic</h3>
+      <p>Boné com ajuste e bordado frontal.</p>
+      <p><strong>R$ 59,90</strong></p>
+      <a class="botao" href="#">Comprar via WhatsApp</a>
     </div>
-  </div>
+  </section>
 
   <section class="avaliacoes">
-    <h2>O que dizem nossos clientes</h2>
-    <div class="avaliacao">"Produto de qualidade absurda, entrega rápida e muito estilo!"</div>
-    <div class="avaliacao">"Os óculos VF são os melhores que já usei. Recomendo demais!"</div>
+    <h2>O que nossos clientes dizem</h2>
+    <div class="avaliacao">
+      “Produto excelente! Chegou antes do prazo e com muita qualidade.” — João P.
+    </div>
+    <div class="avaliacao">
+      “A qualidade me surpreendeu. Super recomendo!” — Ana M.
+    </div>
   </section>
 
   <section class="redes-sociais">
-    <h2>Nos acompanhe</h2>
+    <h2>Siga a VF Imports nas redes</h2>
     <div class="social-links">
       <a href="#">Instagram</a>
       <a href="#">WhatsApp</a>
-      <a href="#">Shopee</a>
+      <a href="#">TikTok</a>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 VF Imports. Todos os direitos reservados.
+    © 2025 VF Imports - Todos os direitos reservados<br>
+    Contato: vfconcept01@gmail.com
   </footer>
-
 </body>
 </html>
